first REAL commit

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@
 markdown: rdiscount
 auto: true
 title: "blog.timmschoof.com"
-
+url: "http://timmschoof.com"
+email: "hello@timmschoof.com"
+author: "Timm Schoof"
