fixed wrong site url that resulted in broken visit-page-links in the rss feed

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 markdown: rdiscount
 auto: true
 title: "blog.timmschoof.com"
-url: "http://timmschoof.com"
+url: "http://blog.timmschoof.com"
 email: "hello@timmschoof.com"
 author: "Timm Schoof"
