--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-# accessible as site.*
 markdown: rdiscount
 auto: true
-title: "blog.timmschoof.com"
-url: "http://blog.timmschoof.com"
-email: "hello@timmschoof.com"
-author: "Timm Schoof"
+ftp_host: timmschoof.com
+ftp_dir: /www/timmschoof/blog
+title: blog.timmschoof.com
+url: http://blog.timmschoof.com
+email: hello@timmschoof.com
+author: Timm Schoof
+permalink: /:year/:month/:day/:title
