--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ email: hello@timmschoof.com
 author: Timm Schoof
 permalink: /:year/:month/:day/:title
 description: "This is Timm Schoof's personal blog. It's covering tech, films, and general thoughts."
+paginate: 4
