--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ author: Timm Schoof
 permalink: /:year/:month/:day/:title
 description: "This is Timm Schoof's personal blog. It's covering tech, films, and general thoughts."
 paginate: 4
+pygments: true
+lsi: true
+production: false
