--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ author: Timm Schoof
 permalink: /:year/:month/:day/:title
 description: "This is Timm Schoof's personal blog. It's covering tech, films, and general thoughts."
 paginate: 4
+paginate_file: index.html
 pygments: true
 lsi: true
 production: false
