--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ url: http://blog.timmschoof.com
 email: hello@timmschoof.com
 author: Timm Schoof
 permalink: /:year/:month/:day/:title
-description: "This is Timm Schoof's personal blog. It's covering tech, films, and general thoughts."
+description: "This is Timm Schoof's personal blog."
+pagination: 4
