--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ title: blog.timmschoof.com
 url: http://blog.timmschoof.com
 email: hello@timmschoof.com
 author: Timm Schoof
-permalink: /:year/:month/:day/:title
+permalink: /:year/:month/:day/:title/
 description: "This is Timm Schoof's personal blog."
 paginate: 7
